# SigmaGmbH-swisstronik-librustgo-6b420bc5

./: .gitignore  .swtr_seed  Enclave_u.c  Enclave_u.h  Makefile  README.md  buildrun.sh  buildrun_linux.sh  buildrun_mac.sh  go.mod  go.sum  ibc_test.go  lib.go  lib_test.go
.circleci/: config.yml
.github/workflows/: ci.yml  codeql-analysis.yml
app/: Cargo.toml  build.rs
app/src/: bin.rs  cache.rs  enclave.rs  lib.rs  memory.rs  querier.rs  types.rs
cmd/demo/: connector.go  db.go  main.go
debug_app/: Cargo.toml  build.rs
debug_app/src/: bin.rs
go_protobuf_gen/: ffi.pb.go  node.pb.go
internal/api/: api_test.go  bindings.h  callbacks.go  callbacks_cgo.go  iterator_test.go  lib.go  lib_test.go  libsgx_wrapper.dylib  libwasmvm.dylib  mocks.go
libwasmvm/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
libwasmvm/evm/common-types/: Cargo.toml
libwasmvm/evm/common-types/src/: lib.rs
libwasmvm/evm/precompiles/bn128/: Cargo.toml
libwasmvm/evm/precompiles/curve25519/src/: lib.rs
libwasmvm/evm/precompiles/precompile-std/: Cargo.toml
libwasmvm/evm/precompiles/precompile-std/src/: lib.rs
libwasmvm/evm/sgx_evm/: Cargo.toml
libwasmvm/evm/sgx_evm/src/: backend.rs  lib.rs
libwasmvm/evm/sgx_evm/src/primitives/: address.rs  mod.rs  raw_transaction.rs
libwasmvm/evm/sgx_evm/src/storage/: mocked_storage.rs  mod.rs
libwasmvm/protobuf_contracts/: ffi.proto
libwasmvm/src/: api.rs  args.rs  cache.rs  debug.rs  iterator.rs  lib.rs  querier.rs  storage.rs  test_utils.rs  tests.rs
libwasmvm/src/error/: go.rs  rust.rs
libwasmvm/src/evm/: backend.rs  mod.rs  storage.rs
libwasmvm/src/evm/common-types/src/: lib.rs
libwasmvm/src/evm/precompiles/blake2f/src/: lib.rs
libwasmvm/src/evm/precompiles/sha3fips/src/: lib.rs
libwasmvm/src/evm/precompiles/simple/: Cargo.toml
libwasmvm/src/evm/sgx_evm/src/: backend.rs  lib.rs  precompiles.rs
libwasmvm/src/protobuf_generated/: ffi.rs
sgx-evm/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  bindings.h  build.rs
sgx-evm/evm/internal_types/src/: lib.rs
sgx-evm/evm/precompiles/precompile-std/: Cargo.toml
sgx-evm/evm/precompiles/precompile-std/src/: lib.rs
sgx-evm/evm/sgxvm/: Cargo.toml
sgx-evm/evm/sgxvm/src/: backend.rs  lib.rs  precompiles.rs
sgx-evm/protobuf_contracts/: ffi.proto
sgx-evm/src/: backend.rs  coder.rs  encryption.rs  key_manager.rs  lib.rs  ocall.rs  querier.rs  storage.rs
sgx-evm/src/attestation/: cert.rs  consts.rs  hex.rs  keychain.rs  mod.rs  seed_client.rs  seed_server.rs  utils.rs
sgx-evm/src/error/: mod.rs  rust.rs
sgx-evm/src/handlers/: mod.rs  node.rs  tx.rs
sgx-evm/src/protobuf_generated/: ffi.rs
sgx-evm/src/ra/: cert.rs  consts.rs  mod.rs  report.rs  seed_client.rs  seed_server.rs  types.rs  utils.rs
sgx-evm/src/remote_attestation/: attestation.rs  cert.rs  hex.rs  keychain.rs  mod.rs  report.rs
sgx-wrapper/: Cargo.toml  build.rs  cbindgen.toml
sgx-wrapper/protobuf_contracts/: node.proto
sgx-wrapper/src/: cache.rs  enclave.rs  lib.rs  ocall.rs  types.rs
sgx-wrapper/src/errors/: rust.rs
sgx-wrapper/src/protobuf_generated/: node.rs
sgx_evm/: Cargo.toml  Enclave.edl  Enclave.lds  Enclave_t.c  Makefile  bindings.h  build.rs
sgx_evm/evm/internal_types/: Cargo.toml
sgx_evm/evm/internal_types/src/: ffi.rs  lib.rs
sgx_evm/evm/precompiles/blake2f/: Cargo.toml
sgx_evm/evm/precompiles/blake2f/src/: lib.rs
sgx_evm/evm/precompiles/bn128/: Cargo.toml
sgx_evm/evm/precompiles/bn128/src/: lib.rs
sgx_evm/evm/precompiles/modexp/: Cargo.toml
sgx_evm/evm/precompiles/modexp/src/: lib.rs
sgx_evm/evm/precompiles/precompile-std/: Cargo.toml
sgx_evm/evm/sgxvm/: Cargo.toml
sgx_evm/evm/sgxvm/src/: lib.rs
sgx_evm/src/: backend.rs  coder.rs  ffi_backend.rs  lib.rs  memory.rs  ocall.rs  storage.rs
sgx_evm/src/error/: rust.rs
sgx_evm/src/evm/precompiles/curve25519/: Cargo.toml
sgx_evm/src/evm/precompiles/modexp/: Cargo.toml
sgx_evm/src/evm/precompiles/sha3fips/: Cargo.toml
sgx_evm/src/evm/sgxvm/: Cargo.toml
sgx_evm/src/evm/sgxvm/src/: errors.rs
sgx_evm/src/protobuf_generated/: ffi.rs
sgx_wrapper/: Cargo.toml  bindings.h  build.rs  libsgx_evm.dylib
sgx_wrapper/evm/common-types/: Cargo.toml
sgx_wrapper/evm/precompiles/precompile-std/: Cargo.toml
sgx_wrapper/evm/precompiles/simple/src/: lib.rs
sgx_wrapper/src/: cache.rs  lib.rs  ocall.rs  querier.rs
types/: env.go  env_test.go  fraction.go  ibc.go  ibc_test.go  mocked_connector.go  mocked_db.go  msg.go  queries.go  queries_test.go  submessages.go  systemerror.go  types.go
