[package]
name = "sgx-evm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.2.8"
serde_json = "1.0.86"
thiserror = "1.0.37"
hex = "0.4.3"
protobuf = "2.28.0"

[dev-dependencies]
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
tempfile = "3.3.0"

[build-dependencies]
cbindgen = "0.24.3"
protoc-rust = "2.28.0"

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]
