[package]
name = "sgx_wrapper"
version = "1.1.2"
publish = false
authors = ["Admin <admin@swisstronik.com>"]
edition = "2021"
description = "Go bindings for Rust functionality"
repository = "https://github.com/SigmaGmbH/librustgo"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
exclude = [".circleci/*",".github/*", ".gitignore"]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "debug_app"
path = "src/bin.rs"

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
errno = "0.2.8"
serde_json = "1.0.86"
thiserror = "1.0.37"
hex = "0.4.3"
protobuf = "2.28.0"
sgx_evm = { path = "./evm/sgx_evm" }
common_types = { path = "./evm/common-types" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_trts = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_types = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}

[dev-dependencies]
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
tempfile = "3.3.0"

[build-dependencies]
cbindgen = "0.24.3"
protoc-rust = "2.28.0"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
