[package]
name = "common_types"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec", "with-serde"] }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
rlp-derive = "0.1.0"
rlp = { version = "0.5.1", default-features = false }

[dev-dependencies]
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }

[features]
default = ["std"]
std = []
sgx = ["sgx_tstd"]