[package]
name = "sgxvm"
version = "0.1.0"
edition = "2021"

[dependencies]
evm = { version = "0.37.0", default-features = false }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
primitive-types = { version = "^0.12", default-features = false, features = ["rlp"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ethereum = { version = "0.14", default-features = false, features = ["with-codec", "with-serde"] }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5.1", default-features = false }
k256 = { version = "0.11.6", default-features = false, features = ["keccak256", "ecdsa"] }
rlp-derive = "0.1.0"
internal_types = { path = "../internal_types" }

# Precompiles
precompile-std = { path = "../precompiles/precompile-std" }
evm-precompile-simple = { path = "../precompiles/simple" }
evm-precompile-sha3fips = { path = "../precompiles/sha3fips" }
evm-precompile-modexp = { path = "../precompiles/modexp" }
evm-precompile-bn128 = { path = "../precompiles/bn128" }
evm-precompile-blake2f = { path = "../precompiles/blake2f" }
