[package]
name = "evm-precompile-bn128"
version = "1.0.0-dev"
edition = "2021"
description = "BN128 precompiles for EVM"

[dependencies]
primitive-types = { version = "^0.12", default-features = false }
substrate-bn = { version = "0.6.0", default-featuresc = false }

# Precompile-std
precompile-std = { version = "1.0.0-dev", path = "../precompile-std", default-features = false }

[features]
default = ["std"]
std = [
    "precompile-std/std",
]
sgx = ["precompile-std/sgx"]
