[package]
name = "precompile-std"
version = "1.0.0-dev"
edition = "2021"
description = "Precompiles std"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { version = "0.37", default-features = false }
sgx_tstd = { version="1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", branch="master" }
