[package]
name = "evm-precompile-simple"
version = "1.0.0-dev"
edition = "2021"
description = "Simple precompiles for EVM"

[dependencies]
ripemd = { version = "0.1.3", default-features = false }
k256 = { version = "0.11.6", default-features = false, features = ["keccak256", "sha2", "ecdsa"] }
sha3 = { version = "0.10", default-features = false }

# Precompile-std
precompile-std = { version = "1.0.0-dev", path = "../precompile-std", default-features = false }

#[dev-dependencies]
#pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
    "ripemd/std",
    # Precompile-std
    "precompile-std/std",
]
sgx = ["precompile-std/sgx"]