[package]
name = "evm-precompile-sha3fips"
version = "1.0.0-dev"
edition = "2021"
description = "SHA3 FIPS202 precompiles for EVM"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["fips202"] }

# Precompile-std
precompile-std = { version = "1.0.0-dev", path = "../precompile-std", default-features = false }

#[dev-dependencies]
#pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
    # Precompile-std
    "precompile-std/std",
]
sgx = ["precompile-std/sgx"]